--- a/index.html
+++ b/index.html
@@ -57,12 +57,18 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2> Quem foi JOrge e Mateus?</h2>
+                    <p class="p-2"A DUPLA QUE CONQUISTOU O BRASIL
+                        Responsáveis por algumas das levadas mais animadas do sertanejo universitário,
+                        como “Pode Chorar”, “Voa Beija Flor”, 
+                        “Amo Noite e Dia”, “A Hora é Agora”, “Sosseguei”, “Propaganda”, entre outras, 
+                        os goianos Jorge & Mateus, da cidade de Itumbiara – Goiás, ganharam projeção nacional e,
+                        hoje, são considerados uma das principais duplas do Brasil.
+                        Foi através de um amigo em comum, em 2005, que Jorge, estudante de Direito que participava,
+                        sozinho, de muitos festivais de música, e Mateus, que cursava Agronomia e também se apresentava
+                        em festas e festivais musicais, tiveram a oportunidade de cantar juntos em um churrasco de amigos. 
+                        A sintonia foi tão forte, que passaram a fazer shows como dupla. O primeiro foi em 26 de maio de 2005, 
+                        em uma boate da cidade de Itumbiara.</p>
                 </div>
             </div>
         </section>
