--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 </div>
                 <div class="col-5">
                     <h2> Quem foi JOrge e Mateus?</h2>
-                    <p class="p-2"A DUPLA QUE CONQUISTOU O BRASIL Responsáveis por algumas das levadas mais animadas do sertanejo universitário, como “Pode Chorar”, “Voa Beija Flor”, “Amo Noite e Dia”, “A Hora é Agora”, “Sosseguei”, “Propaganda”, entre outras, os goianos Jorge & Mateus, da cidade de Itumbiara – Goiás, ganharam projeção nacional e, hoje, são considerados uma das principais duplas do Brasil. Foi através de um amigo em comum, em 2005, que Jorge, estudante de Direito que participava, sozinho, de muitos festivais de música, e Mateus, que cursava Agronomia e também se apresentava em festas e festivais musicais, tiveram a oportunidade de cantar juntos em um churrasco de amigos. A sintonia foi atão forte, que passaram a fazer shows como dupla. O primeiro foi em 26 de maio de 2005, em uma boate da cidade de Itumbiaraa."</p>
+                    <p class="p-2"JORGE & MATEUS, A DUPLA QUE CONQUISTOU O BRASIL
+Responsáveis por algumas das levadas mais animadas do sertanejo universitário, como “Pode Chorar”, “Voa Beija Flor”, “Amo Noite e Dia”, “A Hora é Agora”, “Sosseguei”, “Propaganda”, entre outras, os goianos Jorge & Mateus, da cidade de Itumbiara – Goiás, ganharam projeção nacional e, hoje, são considerados uma das principais duplas do Brasil."</p>
                 </div>
             </div>
         </section>
