--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Responsáveis por algumas das levadas mais animadas do sertanejo universitário,
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/jorgeemateus"
+                        <img src=""
                             class="img/jorge-e-mateus-27-abril-22.png" loading="lazy">
                     </div>
                     <div class="col-md-4">
@@ -84,7 +84,7 @@ Responsáveis por algumas das levadas mais animadas do sertanejo universitário,
                     </div>
                     <div class="col-md-4">
                         <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
+                            class="img/18be242-jorge_mateus.avif" loading="lazy">
                     </div>
                 </div>
              </div>
