--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ Responsáveis por algumas das levadas mais animadas do sertanejo universitário,
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src=""
-                            class="img/jorge-e-mateus-27-abril-22.png" loading="lazy">
+                        <img src="img/18be242-jorge_mateus.avif"
+                            class="" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/Jorge_%26_Mateus.jpg" class="img-fluid rounded-5"
