--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Responsáveis por algumas das levadas mais animadas do sertanejo universitário,
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
                         <img src="img/18be242-jorge_mateus.avif"
-                            class="" loading="lazy">
+                            class="img/jorge-e-mateus-2.webp" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/Jorge_%26_Mateus.jpg" class="img-fluid rounded-5"
