--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@ Responsáveis por algumas das levadas mais animadas do sertanejo universitário,
                             class="img/jorge-e-mateus-2.webp" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/Jorge_%26_Mateus.jpg" class="img-fluid rounded-5"
+                        <img src="img/jorge-e-mateus-2.webp" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/jorge-e-mateus-2.webp" class="img-fluid rounded-5" loading="lazy">
+                        <img src="" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                        <img src="img/jorge-e-mateus-2.webp"
                             class="img/18be242-jorge_mateus.avif" loading="lazy">
                     </div>
                 </div>
