--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ Responsáveis por algumas das levadas mais animadas do sertanejo universitário,
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/18be242-jorge_mateus.avif"
-                            class="img/jorge-e-mateus-2.webp" loading="lazy">
+                        <img src="img/jorgemateu"
+                            class="" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/jorge-e-mateus-2.webp" class="img-fluid rounded-5"
+                        <img src="" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
