--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                 <div class="col-5">
                     <h2> Quem foi JOrge e Mateus?</h2>
                     <p class="p-2"JORGE & MATEUS, A DUPLA QUE CONQUISTOU O BRASIL
-Responsáveis por algumas das levadas mais animadas do sertanejo universitário, como “Pode Chorar”, “Voa Beija Flor”, “Amo Noite e Dia”, “A Hora é Agora”, “Sosseguei”, “Propaganda”, entre outras, os goianos Jorge & Mateus, da cidade de Itumbiara – Goiás, ganharam projeção nacional e, hoje, são considerados uma das principais duplas do Brasil."</p>
+
+                        Responsáveis por algumas das levadas mais animadas do sertanejo universitário, como “Pode Chorar”, “Voa Beija Flor”, “Amo Noite e Dia”, “A Hora é Agora”, “Sosseguei”,
+                        “Propaganda”,  entre outras, os goianos Jorge & Mateus, da cidade de Itumbiara – Goiás, ganharam projeção nacional e, hoje,
+                        são considerados uma das principais duplas do Brasil."</p>
                 </div>
             </div>
         </section>
