--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
                         <img src="img/jorgemateu"
-                            class="" loading="lazy">
+                            class="img/jorgeemateus" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="" class="img-fluid rounded-5"
