--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
                             class="img/jorgeemateus" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="" class="img-fluid rounded-5"
+                        <img src="img/jorge-e-mateus-2.webp" class=""
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="" class="img-fluid rounded-5" loading="lazy">
+                        <img src="" class="" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/jorge-e-mateus-2.webp"
+                        <img src=""
                             class="img/18be242-jorge_mateus.avif" loading="lazy">
                     </div>
                 </div>
