--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             class="img/jorgeemateus" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/jorge-e-mateus-2.webp" class=""
+                        <img src="img/jorge-e-mateus-2.webp" class="img/JorgeeMateus_site.webp"
                             loading="lazy">
                     </div>
                 </div>
