--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="" class="" loading="lazy">
+                        <img src="img/Jorge_%26_Mateus.jpg" class="" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src=""
