--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <img src="img/Jorge_%26_Mateus.jpg" class="" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src=""
+                        <img src="img/18be242-jorge_mateus.avif"
                             class="img/18be242-jorge_mateus.avif" loading="lazy">
                     </div>
                 </div>
