--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/Jorge_%26_Mateus.jpg" class="" loading="lazy">
+                        <img src="j" class="" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/18be242-jorge_mateus.avif"
