--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                 <div class="col-5">
                     <h2> Quem foi JOrge e Mateus?</h2>
                     <p class="p-2"JORGE & MATEUS, A DUPLA QUE CONQUISTOU O BRASIL
-
-                        Responsáveis por algumas das levadas mais animadas do sertanejo universitário, como “Pode Chorar”, “Voa Beija Flor”, “Amo Noite e Dia”, “A Hora é Agora”, “Sosseguei”,
+                         Responsáveis por algumas das levadas mais animadas do sertanejo universitário, como “Pode Chorar”, “Voa Beija Flor”, “Amo Noite e Dia”, “A Hora é Agora”, “Sosseguei”,
                         “Propaganda”,  entre outras, os goianos Jorge & Mateus, da cidade de Itumbiara – Goiás, ganharam projeção nacional e, hoje,
                         são considerados uma das principais duplas do Brasil."</p>
                 </div>
@@ -82,7 +81,7 @@
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="j" class="" loading="lazy">
+                        <img src="img/JorgeeMateus_site.webp" class="" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/18be242-jorge_mateus.avif"
