--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/JorgeeMateus_site.webp" class="" loading="lazy">
+                        <img src="" class="" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/18be242-jorge_mateus.avif"
+                        <img src=""
                     </div>
                 </div>
              </div>
